# notes_backend

./: Cargo.toml
src/: main.rs
src/server/: mod.rs
src/store/: file_store.rs  memory_store.rs  mod.rs
