[package]
name = "notes_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",
    "fast-rng",
    "serde"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies]
serde_json = "1.0"
actix-web = "4"
